Fix window title alignment

--- a/src/features/windows/style.module.scss
+++ b/src/features/windows/style.module.scss
@@ -124,6 +124,7 @@
   font-size: 12px;
   display: flex;
   justify-content: center;
+  align-items: center;
   position: absolute;
   height: calc(20px);
   top: -1px;
